# Logos-ML

./: CMakeLists.txt  README.md  help2.py
.cache/clangd/index/: AlignedAlloc.hpp.B73D59E9F9A12B3D.idx  Buffer.cpp.CDF832DACEEDFB1C.idx  Buffer.hpp.D4F05FE3F1EEA359.idx  Functions.hpp.B9C622EF8270C535.idx  Kernels.hpp.9FDE331CE5D03A7C.idx  Kernels.hpp.BD2E5AE91F8696F8.idx  Layer.hpp.6E4B62398AEC471F.idx  Layer.hpp.FC81044C4EE0E116.idx  Linear.hpp.17A8162A1C4C3A54.idx  Matrix.hpp.8ADA445DE86D2C5D.idx  Matrix.hpp.FD69DE7398788962.idx  Matrix.inl.7212342D0850A528.idx  MemoryUtility.hpp.1F973520FC0E66F2.idx  NeuralNetwork.cpp.59C21BD4C7892EE6.idx  NeuralNetwork.hpp.50BD8FFC0E97FF1B.idx  ReLU.hpp.3D47FCBBB44CE79B.idx  main.cpp.23D1F3C4EE0008AA.idx  main.cpp.87F67828D8CB5B49.idx
src/: Expression-Tree.hpp  Functions.hpp  Kernels.hpp  Layer.hpp  Linalg.hpp  Linear.hpp  Logging.hpp  MLP-Mnist.cpp  ML_ops.hpp  Matrix.cpp  Matrix.hpp  Matrix.inl  MemoryArena.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  ReLU.hpp  Utils.hpp  main.cpp
src/Layers/: Layer.hpp
src/Memory/: AlignedAlloc.hpp  Buffer.cpp  Buffer.hpp  MemoryPool.hpp  MemoryUtility.hpp
